# Flow

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
flow/executor/: CMakeLists.txt  args_parser.hpp  flow.cpp
flow/src/: defs.hpp  flow  keywords.hpp  script_stream.hpp  type_traits.hpp  utils.hpp
flow/src/runtime/: context.hpp  core.hpp  exception.hpp  state.hpp  static_storage.hpp
flow/src/types/: function.cpp  types_def.hpp  value.cpp
test/: CMakeLists.txt  syntax_test.cpp
